IJPL-246914 [json] Automatically apply some schemas from Json schema catalog
Merge-request: IJ-MR-207825
Merged-by: Nicolay Mitropolsky <nicolay.mitropolsky@jetbrains.com>

GitOrigin-RevId: c2f26164e56fd3d7e3d238b631d91d9fc18348ff